# GeneralPractice

./: .gitignore
C++/Acceleratec++/: anotacoes.odt
C++/Acceleratec++/0-1/: hello-world.cpp  reading-blank-spaces.cpp  teste  working-with-strings.cpp
C++/Acceleratec++/3/: SortingStructs.cpp  calculando-medianas.cpp  iteradores.cpp  teste  (+2 more)
C++/oop/: construtor.cpp  student-info.cpp  teste
GO/functions/: functions-variable-paras.go  functions.go
GO/map/: map.go
GO/slices-arrays/: append-go.go  arrays.go  beer.go  slices.go  utils.txt
Java/java-como-programar/: Teste.java
QT/: relatorio.odt
QT/bars/: bars
QT/graficos/: CMakeLists.txt  bar.cpp  bar.h  bar.ui  data.qrc  graficos.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scatter.cpp  scatter.h
QT/reading-json/: animestats.cpp  animestats.h  data.qrc  main.cpp  mainwindow.cpp  mainwindow.h  reading-json.pro
QT/signals-slots/: Makefile  signals-slots.pro  teste.cpp
c/: const-functions.cpp  default_values_function.cpp  destructor.cpp  iterate-reference.cpp  static-data-member.cpp  static-value.c  templates.cpp
cuda/: matrix_add.cu  vector_add.cu
cybersecurity/cryptograph/: block_cipher.py
machine-learning/knn-student-depression/: Cargo.toml
machine-learning/traffic/: main.py
mpi/: greetings.c  teste  trapezoidal-rule.c
python/basics/: enumerate.py  id.py  imc.py  iterator.py  short-circuit-or.py  try-except.py  tuple_vs_lists.py  unpack.py  while-else.py
python/ia/: 1D_convolution.py  composing-neural-networks.py
rust/concepts/: control-flow.rs  data-types.rs  functions.rs  multable.rs  shadowing.rs
rust/enums/: enum.rs  match  match.rs
rust/error-handling/: error-struct  error-struct.rs  panic  panic.rs  propagating-error.rs  recoverable  recoverable.rs
rust/generics-traits/: generic-function  generic-function.rs  generic-structs  generic-structs.rs  traits.rs
rust/generics-traits-lifetime/: lifetime.rs
rust/guessing_game/: readme.md
rust/ownership/: references.rs  what-is.rs
rust/structs/: methods  methods.rs  struct.rs  tuple_struct.rs
rust/vectors/: iterate.rs  multiple-data  multiple-data.rs  vectors  vectors.rs
(+404 files in other folders)
